@@ -294,8 +294,6 @@ e5e372e0bd5ca39b9a4eeed2a48621d795638395 data\mmorpg\advancements\recipes\mmorpg
 27217357ba571669928c004696c2e362f73ca65d data\mmorpg\advancements\recipes\mmorpg_main\mat\golden_orb.json
 995752efc973293bec5469021da6339857289c63 data\mmorpg\advancements\recipes\mmorpg_main\mat\infused_iron.json
 8160b2a70f799d1c4a61cb8a517a09eb621005ba data\mmorpg\advancements\recipes\mmorpg_main\mat\mythic_essence.json
-1e18e7f8ea7be825242c6c7d858273ab74f0609d data\mmorpg\advancements\recipes\mmorpg_main\ore0.json
-12efc96f0d3a6d6b371dd83ab4e5bcc37265c8b4 data\mmorpg\advancements\recipes\mmorpg_main\ore1.json
 51ff75926fd5bd404363c625f65de75009ae5668 data\mmorpg\advancements\recipes\mmorpg_main\teleport_scroll.json
 264f16aef0ba8d463cd882c12fbbd1ec169d4b57 data\mmorpg\affixes\prefix\arcanists.json
 ba0300d0425fa92de1cdf9189482ec8f23f76ddd data\mmorpg\affixes\prefix\archaeologists.json
@@ -310,7 +308,7 @@ f1db7c77937db436f65ea5407dba78f8908c9037 data\mmorpg\affixes\prefix\enduring_fie
 6823d9a586f8196ee37d95b1c4b7568cde49a66b data\mmorpg\affixes\prefix\energetic.json
 faf809f62e7b86846e34196add27cb96ef4dbc94 data\mmorpg\affixes\prefix\eternal_field.json
 687bc88e9ec5a43fc4e3b89f1b8b10df644e82a9 data\mmorpg\affixes\prefix\evasive.json
-626c8380219ab17e97350231ee387f95060c6ba6 data\mmorpg\affixes\prefix\fire_heretic.json
+a4acbb1ca03047708b1e0c99cc47c058c83f985f data\mmorpg\affixes\prefix\fire_heretic.json
 f78d2b558cbc9b19239dcd3d07fad2e1c0615e76 data\mmorpg\affixes\prefix\fire_imbued.json
 5c521b4b6f092db8dbc763d59cccc7edd643454e data\mmorpg\affixes\prefix\fire_shield.json
 0aa834b03fc515df2d5393e0c663988b47d56359 data\mmorpg\affixes\prefix\flaming.json
@@ -326,7 +324,7 @@ b150003a2a75be16c4a8be65e2ddf83eadc0b337 data\mmorpg\affixes\prefix\heros.json
 f069d5ea81bac9fd987b27b2abe889038692790a data\mmorpg\affixes\prefix\looters.json
 5d2cd6e0195a4830a73ca7d73e0d8118e1a16639 data\mmorpg\affixes\prefix\magical.json
 4fa97c70b5cbe707d4897eff1d495720e6df1f91 data\mmorpg\affixes\prefix\magic_siphon.json
-0739de8c593f318edebcb6ff1e3351c22b1a38cf data\mmorpg\affixes\prefix\nature_heretic.json
+888b666d6132921313c8b58ea5b8cde32c312f3b data\mmorpg\affixes\prefix\nature_heretic.json
 9bc2c13d6da82a68d3b0aae8325a7553e0584ab4 data\mmorpg\affixes\prefix\nature_imbued.json
 142116213108fabc5d7de24a5ff9417e98059e89 data\mmorpg\affixes\prefix\nature_shield.json
 5f3d675d56f5e3fcbf20370bd38dfbfe32b32817 data\mmorpg\affixes\prefix\tenacious.json
@@ -336,14 +334,14 @@ afef9560491c10bbdaeac4e71faffe7e3f5f7a6c data\mmorpg\affixes\prefix\thirst_of_fr
 f2ea33be0906329fc80d2ef88f0e700ec724ee5c data\mmorpg\affixes\prefix\thirst_of_lightning.json
 de5c34fae39eb66e1672542fba998d2b69f70be2 data\mmorpg\affixes\prefix\thorny.json
 6eab7fec556515154e33f3f675a19a33ead13f55 data\mmorpg\affixes\prefix\thundering.json
-950a48c76dbe10ec15037997c0ad1c33d741f975 data\mmorpg\affixes\prefix\thunder_heretic.json
+2ae9b35540ea4306ca0224e12c1d77301eb1d751 data\mmorpg\affixes\prefix\thunder_heretic.json
 5bffd51952268bef04639e79d645848f115cbcf4 data\mmorpg\affixes\prefix\thunder_imbued.json
 277903d41a83c98d74365e602e672f6602a58303 data\mmorpg\affixes\prefix\thunder_shield.json
 dd69df5ff319e6fbcc755c957a35d398fa6c4641 data\mmorpg\affixes\prefix\touch_of_magic.json
 6118589a75af00a333cde0d5ade5695242718fdf data\mmorpg\affixes\prefix\tough.json
 4f39eba24839d782117f62f19af4f33c5b350db1 data\mmorpg\affixes\prefix\treasure_seeker.json
 8a3e6234e29d5fe60703d56c0ff6bd0286124140 data\mmorpg\affixes\prefix\unending_field.json
-01f01bb98ac88320fa721bd9f4fa7d76603214f3 data\mmorpg\affixes\prefix\water_heretic.json
+322d145550dda2bd016b35b3300adccef818dc7c data\mmorpg\affixes\prefix\water_heretic.json
 9787f1956d3c76e39914fee6fe59d0861dbd52c2 data\mmorpg\affixes\prefix\water_imbued.json
 e67f72addbda2f1491946c038534d9a3c6a5ac9d data\mmorpg\affixes\prefix\water_shield.json
 f9dd01f96a025454e5802f66d007880f59e9cea0 data\mmorpg\affixes\prefix\wise.json
@@ -367,10 +365,10 @@ c215dbdb1b22523fa77a16fd10f36826e29bcfab data\mmorpg\affixes\suffix\of_guidance.
 f8ce2b9490ea15226851182e06c319ea0f2a7da5 data\mmorpg\affixes\suffix\of_immortality.json
 67dcead8aa4850c5403d5388772e76e12bb3dbe5 data\mmorpg\affixes\suffix\of_magic_shield.json
 34329b3d86dbeec4c23f788d089c373dae0975d4 data\mmorpg\affixes\suffix\of_magic_stealing.json
-79d7a5e8dec88ba14d0ea55185209d8cb9de7331 data\mmorpg\affixes\suffix\of_major_affinity_fire.json
-5055a8a2a07876c7cbc68d40eb04217a931c7514 data\mmorpg\affixes\suffix\of_major_affinity_nature.json
-85e644a5de5c77bc988acd4cff0384aa2daa9d25 data\mmorpg\affixes\suffix\of_major_affinity_thunder.json
-4d6959111b51802a3625defb239b5612c84ee5a7 data\mmorpg\affixes\suffix\of_major_affinity_water.json
+0d5e4b33c5304c10ce675739bcae00977b87f5bd data\mmorpg\affixes\suffix\of_major_affinity_fire.json
+22639d4fdb45b1d3d8fc386b17787c89c5dd8f4f data\mmorpg\affixes\suffix\of_major_affinity_nature.json
+144f7d7767436490d798f8191699d676ef3fcbf1 data\mmorpg\affixes\suffix\of_major_affinity_thunder.json
+695ea821d0dc89c588ad82b10b293a6da19e8184 data\mmorpg\affixes\suffix\of_major_affinity_water.json
 71f4701919f0a871741237f8087b64354b4cd447 data\mmorpg\affixes\suffix\of_mana_regen.json
 ee9989a3989bb1c4a51251a1b7be80e49ec386c1 data\mmorpg\affixes\suffix\of_nature_dissonance.json
 2fd89211eb6901f31b0054a5bbc204e138ca8329 data\mmorpg\affixes\suffix\of_nature_storms.json
@@ -593,12 +591,12 @@ c5393092a78aa32700ec3bc9d5b688bc98c380f9 data\mmorpg\compatible_items\mmorpg\uni
 456ec6c5360f669143439de9074721e9adc2de9d data\mmorpg\compatible_items\mmorpg\uniques\sword\swordwater0.json
 1fcf512a6df10791594fc46039edf3bd010387ef data\mmorpg\compatible_items\mmorpg\uniques\sword\thunder_ele_saber0.json
 588346451536df8fdd2d1b919ea059ca1eb115c8 data\mmorpg\compatible_items\mmorpg\uniques\sword\water_ele_saber0.json
-138a44771f6f7bfc34575a2a98faeb211e06cee9 data\mmorpg\rarity\gear\common.json
-746ab66ebf2418cfc6e173c6566c992f45c09641 data\mmorpg\rarity\gear\epic.json
-03e5bb7d487cf1d9fc61ce2316fd3258d822ce6e data\mmorpg\rarity\gear\legendary.json
-a51986323f74c106990867b1b3c35988781aed3b data\mmorpg\rarity\gear\rare.json
-184940a7ca09c128f6adf0bbb41bb513aef23469 data\mmorpg\rarity\gear\uncommon.json
-a6c5e7b91be0124fd4f372080c1c124b4c3eb671 data\mmorpg\rarity\gear\unique.json
+3d6c682f92cf2f21df1f14682053f2ba99fb6807 data\mmorpg\rarity\gear\common.json
+756e91c3f65a95f368a9518c5717c740f57b6363 data\mmorpg\rarity\gear\epic.json
+3bc68c5c8424da53daa6f08695143703cfce16fb data\mmorpg\rarity\gear\legendary.json
+992c38c1bbcd1b6ed4aca933f7e8cb354ef69edc data\mmorpg\rarity\gear\rare.json
+c98d1297602b320a2847e55501284e2e5f5f881b data\mmorpg\rarity\gear\uncommon.json
+bc9db6dc5cf3fc044852327c29fd7351162cd84c data\mmorpg\rarity\gear\unique.json
 aa165983994f69c0fcbb267323b73e686b8836bb data\mmorpg\recipes\alchemy\instant\misc\remove_spell.json
 edd5e0064a697ca7e5e1c5877ca4408ebf7649a4 data\mmorpg\recipes\alchemy\instant\misc\remove_talent.json
 5b1506cc42be196e1c00a1e56b67aab52a0548aa data\mmorpg\recipes\alchemy\instant\misc\reset_spells.json
@@ -637,23 +635,21 @@ f84f1ce7a838be1f934b82167c94c27d8cb6507c data\mmorpg\recipes\mat\crystallized_es
 68a5369db8941d9b13c843efb96a723729895ce9 data\mmorpg\recipes\mat\golden_orb.json
 1ae157ed18f265da83c446ee1daf0941448526ed data\mmorpg\recipes\mat\infused_iron.json
 a03ed1a87b193f1829d9ea2a001540440d0c5539 data\mmorpg\recipes\mat\mythic_essence.json
-037ef4fedfb786ba381da8e1ad96252099cbdf56 data\mmorpg\recipes\ore0.json
-e894fde1ee36bdbe207fc57e5ad20fde9e3b65fc data\mmorpg\recipes\ore1.json
 89e6b43e91e0217a25a3d5460b52a4b0bbd0860f data\mmorpg\recipes\teleport_scroll.json
-5afaa75dd47d595f23f84ac77b14779420af5474 data\mmorpg\runes\ano.json
+162c85990fdf61117504bcf75dca973ee64a7460 data\mmorpg\runes\ano.json
 9373b99d25e26b012ca8b80123d8be7b162c5d9c data\mmorpg\runes\ber.json
-8e51647707cabf3e5895a398c366cc868b060d73 data\mmorpg\runes\cen.json
-bb829fe4498f45291f52b10af3da0eed5094526e data\mmorpg\runes\dos.json
-5347d9feb8c43ce8aaed46fb547a18f8b449db9e data\mmorpg\runes\goh.json
-2f115f97d53aa1a0992c387c391d4ce1ea4a4720 data\mmorpg\runes\ita.json
-e7fc454d787f3439f2a936e3c8a46f38bf0f0a93 data\mmorpg\runes\mos.json
-abf4b76079a6c93e9b9d739cb0faa8bc5dcc4353 data\mmorpg\runes\oni.json
+c9c3f578ce396560c47a3aa8bea424df1d883dcd data\mmorpg\runes\cen.json
+b6569ee2fdeb05585741bae58d4feb30e9ddea6f data\mmorpg\runes\dos.json
+b67470181d2359dc61651a94587ee0e3d82f80eb data\mmorpg\runes\goh.json
+469f2f7a1d12088eedc72c4d20e4839aad4d3042 data\mmorpg\runes\ita.json
+052ba0d7af42047f1ea6dbec085f987fcdc355c2 data\mmorpg\runes\mos.json
+cb20157d8c2a9a4e00f4194c0eee56348ff398f2 data\mmorpg\runes\oni.json
 c167d18849dd1bd2d30bb1b9bc1aa82f061d13ef data\mmorpg\runes\psi.json
-90989da88dbd5a2bd67f8cfc5e6c7153126ddb09 data\mmorpg\runes\qar.json
-59eaf07656067a7ca3cbe5c311f57b7c6fbafc9e data\mmorpg\runes\rah.json
-2ac2c888fa5a349d77653316da995d1cbd9f6f1a data\mmorpg\runes\voh.json
-fcfd3e5398f5c8c5514e6f2bc11d53a84290e147 data\mmorpg\runes\wor.json
-4b92bbaae7a965945e63d5c1ba44958174dfdd44 data\mmorpg\runes\xah.json
+efb1c518811add8743be1c7467b018c4de862c25 data\mmorpg\runes\qar.json
+1b01fe51b54e4cc9d2dc7337a7f7e3a00c7d06a4 data\mmorpg\runes\rah.json
+ef6bf836a841571c56bae1e0dcac52e26c50979e data\mmorpg\runes\voh.json
+1a11fcdca555d142076f8edfe5ceb60872ebc639 data\mmorpg\runes\wor.json
+bc25bfb1b1525e44fe30de79896e09b1c11b3b6b data\mmorpg\runes\xah.json
 9b58fa2256420ce10629bdfc5c88b90b0e8ea017 data\mmorpg\rune_words\2_runes\bloom.json
 209187492313231e12592101b7add91861b32c13 data\mmorpg\rune_words\2_runes\magic.json
 ab9e19f4f914b62731562e8a08f8c62ab32cb68c data\mmorpg\rune_words\2_runes\magma.json
