@@ -24,6 +24,6 @@
   },
   "mods": [
     "critical_damage_flat",
-    "very_low_fire_affinity_flat"
+    "high_spell_fire_damage_percent"
   ]
 }
