@@ -10,7 +10,7 @@
     "list": [
       {
         "slots": [
-          "ring"
+          "bracelet"
         ]
       },
       {
@@ -20,7 +20,7 @@
     ]
   },
   "mods": [
-    "water_affinity_flat",
+    "very_low_water_affinity_flat",
     "water_spell_to_attack_dmg_flat"
   ]
 }
