@@ -13,7 +13,7 @@ public enum GearItemEnum implements IWeighted {
         @Override
         public int Weight() {
             return (int) (ModConfig.INSTANCE.DropRates.GEAR_DROPRATE.get()
-                    .floatValue() * 100); // cus some config values are < 1 like 0.1F
+                .floatValue() * 100); // cus some config values are < 1 like 0.1F
         }
 
         @Override
@@ -61,7 +61,7 @@ public enum GearItemEnum implements IWeighted {
         @Override
         public int Weight() {
             return (int) (ModConfig.INSTANCE.DropRates.RUNED_GEAR_DROPRATE.get()
-                    .floatValue() * 100); // cus some config values are < 1 like 0.1F
+                .floatValue() * 100); // cus some config values are < 1 like 0.1F
         }
 
         @Override
@@ -110,7 +110,7 @@ public enum GearItemEnum implements IWeighted {
         @Override
         public int Weight() {
             return (int) (ModConfig.INSTANCE.DropRates.UNIQUE_DROPRATE.get()
-                    .floatValue() * 100); // cus some config values are < 1 like 0.1F
+                .floatValue() * 100); // cus some config values are < 1 like 0.1F
         }
 
         @Override
@@ -135,7 +135,7 @@ public enum GearItemEnum implements IWeighted {
 
         @Override
         public boolean canGetAffixes() {
-            return true;
+            return false;
         }
 
         @Override
