@@ -5,6 +5,7 @@
 * better item names on ground, now also works for all items with stats
 * reduced log spam
 * item names only render when close now, woops.
+* uniques no longer have affixes but their unique stats are now increased
 
 3.4.2
 * creative players can now destroy dungeon blocks and place them.
